fix: resolve critical bugs and improve code quality across all layers
- Fix integer overflow in ticket count validation using long arithmetic
- Centralize MAX_TICKETS config via @Value across all consumers
- Reorder operations to reserve seats before charging payment
- Make InMemoryPurchaseRepository thread-safe with CopyOnWriteArrayList
- Return PurchaseSummary from TicketService to eliminate duplicated calc
- Add infants-per-adult validation (infants cannot exceed adults)
- Add descriptive messages to all InvalidPurchaseException throws
- Return HTTP 201 Created for POST purchase
- Delete unused PurchaseContext record; pass PurchaseSummary directly
- Add findAll() to PurchaseRepository interface
- Fix LoggingAspect to preserve stack traces in warn logging
- Use List.copyOf for immutable exception state
- Add defensive array copy in PurchaseRequest record
- Remove explicit JUnit/Mockito versions (defer to Spring Boot BOM)
- Replace deprecated @MockBean with @MockitoBean
- Strengthen tests: ArgumentCaptor, boundary, partial failure, infants

Made-with: Cursor